$Id: CHANGES 64 2006-02-05 02:19:26Z themightydude $
TheMightyDude (20 May 2006)
--------------------------------------
[1491795] ip detection bug (fixed)

TheMightyDude (21 April 2006)
--------------------------------------
[1470569] Num of moves moved in traderoute not showing FIXED.

TheMightyDude (20 April 2006)
--------------------------------------
Added all the missing Folders and the contents in them.
Patched all in [1470442] Various Bugs (fixes included) apart from the language files.

TheMightyDude (05 February 2006)
--------------------------------------
Patched function connectdb() so that it doesn't blank screen on Setup Info :)
Usage connectdb(false) if error connecting display nothing.
Usage connectdb() if error connecting display "Unable to connect to the database".

Brian Gustin (02 February 2006)
--------------------------------------
fixed bug in traderoutes where players enter number of times to repeat in text box, and got "non existent traderoute" error-
had to make $engage global in the function.

TheMightyDude (02 February 2006)
--------------------------------------
Moved $release_version to the next line after $game_name in config.php to make it easier to find.

Brian Gustin (18 January 2006)
--------------------------------------
Partially fixed the html problems in firefox - it renders better now, renders completely in I.E. on a 50X traderoute
Fixed - removed ability to create traderoute into Sol , and also creating traderoutes into sectors you havent seen yet
Fixed gen_score when player doesnt own a planet (it was returning NULL)
Added additional information in attack.php combat report to aidd in future bug reporting
Noted Log was written as a skirmish, though defender won and attacker dead, tentatively fixed
Noted Player was killed off (dead-dead) despite having an escape pod following loss of combat when attacking
        Unable to repeat the situation, so no longer listed as a bug

Brian Gustin (17 January 2006)