@@ -1,4 +1,8 @@
 $Id: CHANGES 64 2006-02-05 02:19:26Z themightydude $
+TheMightyDude (22 May 2006)
+--------------------------------------
+[1493132] Extra Sector using preset.php (fixed)
+
 TheMightyDude (20 May 2006)
 --------------------------------------
 [1491795] ip detection bug (fixed)
